kubernetes/manifests/monitoring/homer/webapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: homer-webapp
  name: homer-webapp
  namespace: jambonz-monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homer-webapp
  template:
    metadata:
      labels:
        app: homer-webapp
    spec:
      containers:
        - name: homer-webapp
          image: sipcapture/webapp:latest
          ports:
            - containerPort: 80
          resources: {}
          volumeMounts:
            - mountPath: /usr/local/homer/etc/webapp_config.json
              name: webapp-conf
              subPath: webapp_config.json
            - mountPath: /homer-semaphore/.bootstrapped
              name: webapp-conf
              subPath: bootstrapped
      volumes:
      - name: webapp-conf
        configMap:
          name: webapp-conf
          items:
          - key: webapp_config.json
            path: webapp_config.json          
          - key: bootstrapped
            path: bootstrapped
