kubernetes/manifests/monitoring/homer/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: postgres
  name: postgres
  namespace: jambonz-monitoring
spec:
  ports:
    - name: "postgres"
      port: 5432
      targetPort: 5432
  selector:
    app: postgres
  clusterIP: None
