kubernetes/manifests/monitoring/homer/webapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homer-webapp
  namespace: jambonz-monitoring
spec:
  rules:
    - host: homer.k8s-gcp.jambonz.org
      http:
        paths:
        - backend:
            service:
              name: homer-webapp
              port: 
                number: 80
          path: /
          pathType: Prefix
